refactored for consistency.